@startuml cdRest
skin rose

package travelu.client{
    class Client
}

class TraveluController {
    + String getDestinationListJSON()
    + String getDestinationJSON(String destinationName)
    + String getDestinationJSON()
    + void addDestinationJSON(String destinationJSON)
    + void storeCurrentDestinationJSON(String destinationName)
    + void removeDestinationJSON(String destinationName)
    + void addActivityJSON(String activity)
    + void removeActivityJSON(String activity)
    + void setRatingJSON(String rating)
    + void setArrivalDateJSON(String arrivalDate)
    + void setDepartureDateJSON(String departureDate)
    + void updateCommentJSON(String comment)
}

class TraveluService {
    + void load()
    + void save()
    + void saveDestinationName(String currentDestination)
    + String getDestinationName()
    # DestinationList getDestinationList()
}

class TraveluHandler {
    - {static} String DEFAULT_FILENAME_DLIST
    - {static} String DEFAULT_FILENAME_CURRENTD

    - {static} String getFilePath(String filename)
    - {static} getFile(String filename)
    + {static} void writeJSON(Object object, String filename)
    + {static} void save(DestinationList destinationList)
    + {static} void saveDestinationName(String destinationName)
    + {static} DestinationList readDestinationListJSON(String filename)
    + {static} String readCurrentDestinationNameJSON(String filename)
    + {static} String readCurrentDestinationName()
}

Client .. TraveluController
TraveluController --> "traveluService: 1" TraveluService
TraveluService --> "traveluHandler: 1" TraveluHandler
@enduml